--- a/BattleTank/Config/DefaultEngine.ini
+++ b/BattleTank/Config/DefaultEngine.ini
@@ -1,16 +1,12 @@
 [URL]
+[/Script/Engine.RendererSettings]
+r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
 AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
-
-[/Script/IOSRuntimeSettings.IOSRuntimeSettings]
-bSupportsPortraitOrientation=False
-bSupportsUpsideDownOrientation=False
-bSupportsLandscapeLeftOrientation=True
-PreferredLandscapeOrientation=LandscapeLeft
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
@@ -19,7 +15,6 @@ DefaultFluidFriction=0.300000
 SimulateScratchMemorySize=262144
 RagdollAggregateThreshold=4
 TriangleMeshTriangleMinAreaThreshold=5.000000
-bEnableAsyncScene=False
 bEnableShapeSharing=False
 bEnablePCM=True
 bEnableStabilization=False
@@ -52,7 +47,6 @@ bSubsteppingAsync=False
 MaxSubstepDeltaTime=0.016667
 MaxSubsteps=6
 SyncSceneSmoothingFactor=0.000000
-AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
